[tool.poetry]
name = "recap-leetcode-python-project"
version = "0.1.0"
description = ""
authors = ["VijayRamisetty <ramisetty.v@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
